Fixed bug#7096 CSS for navigation bar :: wrong z-index for selected area and hover.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
@@ -3,7 +3,7 @@
  * with it's toolbar, the userbar and the whole main navigation
  *
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.11 $
+ * @version     $Revision: 1.12 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -354,7 +354,7 @@
 #Navigation > .Selected {
     background-position: left -76px;
     background-color: #F92;
-    z-index: 110;
+    z-index: 90;
 }
 
 #Navigation > .Selected > a {
